<resources>
    <string name="app_name">Tingle</string>

    <!-- Headline:-->
    <string name="headline">The Tingle App</string>
    <string name="headlineChar0">T</string>
    <string name="headlineChar1">i</string>
    <string name="headlineChar2">n</string>
    <string name="headlineChar3">g</string>
    <string name="headlineChar4">l</string>
    <string name="headlineChar5">e</string>

    <!-- Last thing added -->
    <string name="last_thing"> Collect last thing added</string>
    <string name="last_thing_text"><u><b>Last thing added:</b></u></string>

    <!-- Button -->
    <string name="save_button">Add</string>
    <string name="list_button">List</string>
    <string name="search_button">Search</string>
    <string name="delete_button">Delete</string>
    <string name="back_button">Back</string>
    <string name="create_button">Create</string>
    <string name="map_button">Map</string>

    <!-- Input Form -->
    <string name="what_thing">Item:</string>
    <string name="where_thing">Location:</string>
    <string name="scanner_text">Scan Object:</string>
    <string name="geo_text">GPS:</string>
    <string name="scanner_text_description"></string>
    <string name="title_activity_front_acticity">FrontActicity</string>
</resources>
