<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.bignerdranch.android.criminalintent.CrimeActivity">

    <!-- Headline Color(ing) -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  android:id="@+id/linearLayout"
                  android:layout_centerHorizontal="true"
                  android:gravity="center_horizontal"
                  android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textSize="30dp"
            android:textColor="@color/colorBlueLight"
            android:text="@string/headlineChar0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textSize="30dp"
            android:textColor="@color/colorRed"
            android:text="@string/headlineChar1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textSize="30dp"
            android:textColor="@color/colorGreen"
            android:text="@string/headlineChar2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textSize="30dp"
            android:textColor="@color/colorBlueLight"
            android:text="@string/headlineChar3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textSize="30dp"
            android:textColor="@color/colorYellow"
            android:text="@string/headlineChar4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textSize="30dp"
            android:textColor="@color/colorGreen"
            android:text="@string/headlineChar5"/>

    </LinearLayout>

    <!-- Back button --> <!--
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/fragmentContainer_list"
        android:gravity="left">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="4dp"
            android:layout_gravity="left"
            />
    </LinearLayout> -->


    <!-- Create button -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:gravity="right">

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_button"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="4dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <!-- Fragment window -->
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/fragmentContainer_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/linearLayout"/>
</RelativeLayout>